@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-30T00:27:59Z",
-  "count_outdated" : 227,
-  "uniques_outdated" : 162,
+  "timestamp" : "2024-01-30T08:07:59Z",
+  "count_outdated" : 228,
+  "uniques_outdated" : 163,
   "count" : 229,
   "uniques" : 164,
   "clones" : [
-    {
-      "timestamp": "2024-01-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-23T00:00:00Z",
       "count": 1,
