@@ -1,3 +1,12 @@
+2024-01-30T08:07:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7708065652 # 70
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-30
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 162 227 / 164 229
+* notice: next accum: outdated-unq outdated-all / unq all: 163 228 / 164 229
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-16] / []
+
 2024-01-30T00:27:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7704398213 # 69
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-30
